--- a/sprint-3.ipynb
+++ b/sprint-3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import warnings\n",
     "import datetime\n",
     "import json\n",
+    "from credentials import * \n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "with open(\"config.json\") as config_file:\n",
@@ -30,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,19 +47,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Retreiving GitHub"
+    "# Retreiving repos given GitHub ID"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "GitHub ID aklapper\n"
+      "GitHub ID dpose\n"
      ]
     }
    ],
@@ -82,13 +83,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['JSON', 'Python']"
+       "['JavaScript', 'TypeScript']"
       ]
      },
      "metadata": {},
@@ -131,14 +132,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "url = \"https://job-search4.p.rapidapi.com/simplyhired/search\"\n",
     "headers = {\n",
-    "    'x-rapidapi-key': \"0a1449c97fmshc98d54f2a209dfbp175d54jsn1408a1529a02\",\n",
-    "    'x-rapidapi-host': \"job-search4.p.rapidapi.com\"\n",
+    "    'x-rapidapi-key': credentials['x-rapidapi-key'],\n",
+    "    'x-rapidapi-host': credentials['x-rapidapi-host']\n",
     "}\n",
     "trend_dict = dict()"
    ]
@@ -152,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 52,
    "metadata": {
     "tags": []
    },
@@ -161,7 +162,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The search returned 11 results\n"
+      "The search returned 19 results\n"
      ]
     }
    ],
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
