--- a/sprint-3.ipynb
+++ b/sprint-3.ipynb
@@ -136,6 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Go to https://rapidapi.com/lattice-data-lattice-data-default/api/job-search4 and register to get credentials for the API \n",
     "url = \"https://job-search4.p.rapidapi.com/simplyhired/search\"\n",
     "headers = {\n",
     "    'x-rapidapi-key': credentials['x-rapidapi-key'],\n",
